--- a/style.css
+++ b/style.css
@@ -1,18 +1,38 @@
-.column, .row {
-  border: 1px solid lightgray;
+.container {
+  display: flex;
+  justify-content: space-around;
+}
+
+.grid {
+  display: flex;
+  margin: 32px;
+  height: 700px;
+  width: 350px;
+  background: powderBlue;
+  border: 5px solid black;
+}
+
+.column, .row, .mini-column, .mini-row {
   display: flex;
   flex-direction: column;
   flex: 1;
 }
 
-.container {
-  display: flex;
-  margin: 48px;
-  height: 600px;
-  width: 300px;
-  border: 5px solid black;
+.row, .mini-row {
+  background: #B3CEE5;
+  border-radius: 5px;
+  margin: 1.5px;
 }
 
 .tetromino {
   background: red;
+}
+
+.mini-grid {
+  display: flex;
+  height: 200px;
+  width: 200px;
+  margin: 32px;
+  background: powderBlue;
+  border: 5px solid black;
 }
