--- a/style.css
+++ b/style.css
@@ -32,7 +32,34 @@
   display: flex;
   height: 200px;
   width: 200px;
-  margin: 32px;
+  margin: 32px 0px;
   background: powderBlue;
   border: 5px solid black;
+}
+
+.buttons {
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+  padding: 24px;
+  background: #FAF9F6;
+  border: 3px solid lightgray;
+  border-radius: 18px;
+  box-shadow: 0px 1px 5px rgb(171, 171, 171);
+}
+
+button {
+  font-size: 24px;
+  font-weight: 400;
+  padding: 16px;
+  background: powderBlue;
+  border: 3px solid black;
+  border-radius: 18px;
+  box-shadow: 0px 1px 5px rgb(171, 171, 171);
+  transition: all 0.3s;
+}
+
+button:hover {
+  border:3px solid #B3CEE5;
+  box-shadow: 0px 3px 5px rgb(129, 129, 129);
 }
