fis issue where start button wasn't working properly and add button to reset game

--- a/style.css
+++ b/style.css
@@ -37,6 +37,12 @@
   border: 5px solid black;
 }
 
+.display-score {
+  font-size: 24px;
+  font-weight: 400;
+  text-align: center;
+}
+
 .buttons {
   display: flex;
   flex-direction: column;
